--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -2,7 +2,7 @@
     padding-top: 61px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 
     .header-nav-menu {
         .header-nav-menu-items {
