Added-user-components-and-started-userSlides

--- a/src/components/OurServices/OurServices.scss
+++ b/src/components/OurServices/OurServices.scss
@@ -34,6 +34,7 @@
         .our-service-block {
             padding: 30px 18px 18px 18px;
             background-color: #F3F3F3;
+            cursor: pointer;
         }
 
         .our-services-blocks-skill-name {
