--- a/src/components/ProjectsShow/ProjectShow.scss
+++ b/src/components/ProjectsShow/ProjectShow.scss
@@ -23,10 +23,12 @@
 .projects-show-project{
     margin-top: 76px;
     display: flex;
-   justify-content: space-between;
+   justify-content: center;
    gap: 47px;
   
    .project-show-item-svg{
+    display: flex;
+    justify-content: center;
     img{
         width: 341px;
         height: 500px;
