last-changes-with-black-theme

--- a/src/components/OurServices/OurServices.scss
+++ b/src/components/OurServices/OurServices.scss
@@ -1,54 +1,65 @@
+:root {
+  --background-color: white;
+  --text-color: black;
+  --highlight-color: #FF6300;
+  --service-block-bg: #F3F3F3;
+}
+
+[data-theme="dark"] {
+  --background-color: #121212;
+  --text-color: white;
+  --highlight-color: #FF6300;
+  --service-block-bg: #1F1F1F;
+}
+
 .our-services {
-    margin-top: 120px;
+  margin-top: 120px;
 
-    .our-services-inner {
-        text-align: center;
+  .our-services-inner {
+    text-align: center;
 
-        .services-intro {
-            font-weight: 600;
-            font-size: 65px;
-            font-family: "Poppins", sans-serif;
-            color: #000000;
-
-
-        }
-
-        .services-intro-text-content-text {
-            display: flex;
-            font-weight: 400;
-            width: 932px;
-            margin: 0 auto;
-            font-family: "Poppins", sans-serif;
-            font-size: 21px;
-            color: #000000;
-        }
-
+    .services-intro {
+      font-weight: 600;
+      font-size: 65px;
+      font-family: "Poppins", sans-serif;
+      color: var(--text-color);
     }
 
-    .our-services-blocks {
-        display: flex;
-        justify-content: center;
-        margin-top: 24px;
-        gap: 31px;
-
-        .our-service-block {
-            padding: 30px 18px 18px 18px;
-            background-color: #F3F3F3;
-            cursor: pointer;
-        }
-
-        .our-services-blocks-skill-name {
-            color: #000000;
-            font-weight: 600;
-            font-size: 32px;
-            font-family: "Poppins", sans-serif;
-            margin-top: 10px;
-        }
-
-        .our-services-blocks-skill-text {
-            font-weight: 400;
-            font-size: 19px;
-            color: #000000;
-        }
+    .services-intro-text-content-text {
+      display: flex;
+      font-weight: 400;
+      width: 932px;
+      margin: 0 auto;
+      font-family: "Poppins", sans-serif;
+      font-size: 21px;
+      color: var(--text-color);
     }
+  }
+
+  .our-services-blocks {
+    display: flex;
+    justify-content: center;
+    margin-top: 24px;
+    gap: 31px;
+
+    .our-service-block {
+      padding: 30px 18px 18px 18px;
+      background-color: var(--service-block-bg);
+      cursor: pointer;
+    }
+
+    .our-services-blocks-skill-name {
+      color: var(--text-color);
+      font-weight: 600;
+      font-size: 32px;
+      font-family: "Poppins", sans-serif;
+      margin-top: 10px;
+    }
+
+    .our-services-blocks-skill-text {
+      font-weight: 400;
+      font-size: 19px;
+      color: var(--text-color);
+    }
+  }
 }
