--- a/src/components/aboutMeContent/AboutMeContens.scss
+++ b/src/components/aboutMeContent/AboutMeContens.scss
@@ -1,64 +1,77 @@
-.about-me-content {
+:root {
+  --background-color: white;
+  --text-color: black;
+  --link-color: #000; 
+  --button-bg-color: #FF6300; 
+  --button-text-color: white;
+}
+  [data-theme="dark"] {
+    --background-color: #121212; 
+    --text-color: white; 
+    --highlight-color: #FF6300;
+  }
+  
+  .about-me-content {
     margin-top: 86px;
-
+    background-color: var(--background-color); 
+  
     .about-me-content-inner {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+  
+      .about-me-content-text {
+        max-width: 756px;
+  
+        .about-me-content-text-content {
+          font-family: "Poppins", sans-serif;
+          font-weight: 600;
+          font-size: 65px;
+          color: var(--text-color); 
+        }
+  
         .about-me-content-text {
-            max-width: 756px;
-            .about-me-content-text-content {
+          font-weight: 400;
+          font-size: 21px;
+          font-family: "Poppins", sans-serif;
+          color: var(--text-color); 
+        }
+  
+        .skills-content {
+          margin-top: 40px;
+  
+          .skills-content-menu {
+            .about-me-content-text-content-item {
+              display: flex;
+              row-gap: 15px;
+              flex-direction: column;
+  
+              .skill-name {
                 font-family: "Poppins", sans-serif;
-                font-weight: 600;
-                font-size: 65px;
-                color: #000000;
-            }
-
-            .about-me-content-text {
+                color: var(--text-color); 
                 font-weight: 400;
                 font-size: 21px;
-                font-family: "Poppins", sans-serif;
-                color: #000000;
+                width: 500px;
+              }
             }
-
-            .skills-content {
-                margin-top: 40px;
-
-                .skills-content-menu {
-                    .about-me-content-text-content-item {
-                        display: flex;
-                        row-gap: 15px;
-                        flex-direction: column;
-
-                        .skill-name {
-                            font-family: "Poppins", sans-serif;
-                            color: #000000;
-                            font-weight: 400;
-                            font-size: 21px;
-                            width: 500px;
-                        }
-
-                    }
-                }
-
-                .skills {
-                    position: relative;
-                    padding-top: 40px;
-
-                    .circle-svg {
-                        position: absolute;
-                        margin-top: -7px;
-                        left: -20px;
-                        cursor: pointer;
-                        border-radius: 100%;
-                        width: 32px;
-                        height: 32px;
-
-                    }
-
-                }
+          }
+  
+          .skills {
+            position: relative;
+            padding-top: 40px;
+  
+            .circle-svg {
+              position: absolute;
+              margin-top: -7px;
+              left: -20px;
+              cursor: pointer;
+              border-radius: 100%;
+              width: 32px;
+              height: 32px;
             }
+          }
         }
+      }
     }
-}
+  }
+  
