--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,35 +1,64 @@
-.header-inner {
+:root {
+    --background-color: white;
+    --text-color: black;
+    --link-color: #000; 
+    --button-bg-color: #FF6300; 
+    --button-text-color: white;
+  }
+
+  .logo-name{
+    font-size: 44px;
+    font-family: "Poppins", sans-serif;
+    .logo-style{
+      background-color: #FF6300;
+      padding: 0px 2px 0px 2px;
+      color: white;
+    }
+
+  }
+  
+  [data-theme="dark"] {
+    --background-color: black;
+    --text-color: white; 
+    --link-color: #fff; 
+    --button-bg-color: #FF6300; 
+    --button-text-color: white; 
+  }
+  
+  .header-inner {
     padding-top: 61px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+    background-color: var(--background-color);
+  
     .header-nav-menu {
-        .header-nav-menu-items {
-            display: flex;
-            align-items: center;
-            gap: 27px;
-        }
+      .header-nav-menu-items {
+        display: flex;
+        align-items: center;
+        gap: 27px;
+      }
     }
-
+  
     .header-nav-menu-items {
-        .header-nav-menu-link {
-            cursor: pointer;
-            font-family: "Poppins", sans-serif;
-            font-weight: 400;
-            font-size: 21px;
-            color: #000000;
-        }
-
-        .header-nav-menu-link-btn {
-            cursor: pointer;
-            padding: 10px 20px 10px 20px;
-            font-weight: 400;
-            background-color: #FF6300;
-            border: none;
-            font-family: "Poppins", sans-serif;
-            color: #FFFFFF;
-            border-radius: 5px;
-        }
+      .header-nav-menu-link {
+        cursor: pointer;
+        font-family: "Poppins", sans-serif;
+        font-weight: 400;
+        font-size: 21px;
+        color: var(--link-color);
+      }
+  
+      .header-nav-menu-link-btn {
+        cursor: pointer;
+        padding: 10px 20px;
+        font-weight: 400;
+        background-color: var(--button-bg-color); 
+        border: none;
+        font-family: "Poppins", sans-serif;
+        color: var(--button-text-color); 
+        border-radius: 5px;
+      }
     }
-}
+  }
+  
